2004-05-14  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* (package data) fmat.c: added new methods to fmat class
	* (package data) fmat.c: added fts_return_object() calls to many methods without return value
	* (package data) fvec.c: moved fslice classes (frow and fcol) to fvec.c
	* expression.c: introduced FTS_EXPRESSION_ARG_ONSET macro (for FTM starting argument numbering with $1 instead of $0)

2004-05-10  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* bin/jmax.in: added a check to know if fts is suid root.
	If this is not the case, a warning is displayed.
	The check could be removing by creating the $HOME/.jmax/no_fts_check file.

2004-05-06  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* incremented JMAX_PATCH_VERSION in JMAX-VERSION

2004-05-05  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* 4.1.0 for GNU/Linux released:
	- branch: branch_4_1_0
	- tag : V4_1_0

2004-04-15  Norbert Schnell  <schnell@mac-portable-schnell.ircam.fr>

	* fts/parser.y and fts/expression.c: added $* to expressions

2004-04-08  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* fts/status.c: added fts_status function fts_status_format to dynamically generate status messages
	* fts/tokenizer.l, parser.y and expression.c: added semicolon as list separator similar to comma but without calling callback (leading comma is now forbidden, added terminating semicolon)
	* include/ftsprivate/tokenizer.h moved to incude/fts/ (updated Xcode project and Makefile.am files)
	* fts/expression.c: extended error status descriptions to more expressive messages
	* fts/expression.c: changed function expression_eval_aux added function fts_expression_evaluate to invoke expression evaluation with two hashtables for local and global variables
	* include/fts/function.h: changes signature of fts_fun_t (added return value to arguments and added return of fts_status_t)
	* fts/function.c: adapted functions to new fts_fun_t, added error status messages to new function